# whisperX

./: pyproject.toml  requirements.txt
whisperx/: __init__.py
